--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,23 @@
 {
   "name": "Wiki Modern",
   "short_name": "Wiki",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#f8fafc",
   "theme_color": "#ffffff",
-  "orientation": "portrait",
+  "description": "A reimagined Wikipedia experience.",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/5968/5968958.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/10832/10832322.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/5968/5968958.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/10832/10832322.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
